--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "skipLibCheck": true,
     },
     "include": [
-      "*.ts",
+      "src/*.ts",
     ],
     "exclude": [
       "node_modules"
