--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nymh/ffplay",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Easily play audio with ffplay",
   "main": "src/ffplay.ts",
   "scripts": {
@@ -16,6 +16,11 @@
     "url": "https://github.com/Nymmh/ffplay/issues"
   },
   "homepage": "https://github.com/Nymmh/ffplay#readme",
+  "keywords": [
+    "audio",
+    "ffmpeg",
+    "ffplay"
+  ],
   "devDependencies": {
     "@types/node": "^18.0.4"
   }
